--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Sat Jun 08 12:28:42 CST 2024
-sdk.dir=D\:\\Android\\Sdk
+sdk.dir=C\:\\Users\\86182\\AppData\\Local\\Android\\Sdk
